Fixed links not showing up properly. Moved hidden -> metadata:eidolon:internal Fixed some width issues on markdown

--- a/webui/packages/eidolon-components/src/client/messages/eidolon-markdown.module.css
+++ b/webui/packages/eidolon-components/src/client/messages/eidolon-markdown.module.css
@@ -7,6 +7,12 @@
     gap: .625rem;
 }
 
+.markdown a {
+    color: #0070f3;
+    text-decoration: none;
+    border-bottom: 1px solid #0070f3;
+}
+
 .markdown > p {
     white-space: pre-wrap;
     overflow-wrap: break-word;
